work on the nav caurosal and footer

--- a/assets/assets_new/header.css
+++ b/assets/assets_new/header.css
@@ -70,3 +70,13 @@
     aspect-ratio: 3/2;
     object-fit: contain;
 }
+@media screen and (max-width:991px) {
+    .w-10 {
+    width: 100% !important;
+}
+
+    
+}
+.moveDown{
+transform: translateY(20px);
+}
